更新 .dev.vars.example 文件以添加 AI Gateway 配置示例，修改 worker-configuration.d.ts 文件以反映新的环境变量，更新 wrangler.jsonc 文件以使用新的 AI Gateway 配置，调整 server.ts 文件以使用 @ai-sdk/openai 替代 workers-ai-provider，并确保 AI Gateway 配置完整性检查。

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,3 +1,11 @@
-OPENAI_API_KEY=sk-proj-1234567890
-# Optional - Cloudflare AI Gateway https://developers.cloudflare.com/ai-gateway/
-# GATEWAY_BASE_URL=https://gateway.ai.cloudflare.com/v1/..
+# AI Gateway 配置示例
+# 请将以下值替换为您的实际配置
+
+# DeepSeek API 令牌
+DEEPSEEK_TOKEN=your_deepseek_api_token_here
+
+# Cloudflare AI Gateway 账户 ID
+AI_GATEWAY_ACCOUNT_ID=your_cloudflare_account_id_here
+
+# Cloudflare AI Gateway 网关 ID
+AI_GATEWAY_ID=your_gateway_id_here
