--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,8 +4,9 @@
   "main": "src/server.ts",
   "compatibility_date": "2025-08-03",
   "compatibility_flags": ["nodejs_compat"],
-  "ai": {
-    "binding": "AI"
+  "vars": {
+    "AI_GATEWAY_ACCOUNT_ID": "your_account_id",
+    "AI_GATEWAY_ID": "your_gateway_id"
   },
   "assets": {
     "directory": "public"
