--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,8 +5,8 @@
   "compatibility_date": "2025-08-03",
   "compatibility_flags": ["nodejs_compat"],
   "vars": {
-    "AI_GATEWAY_ACCOUNT_ID": "your_account_id",
-    "AI_GATEWAY_ID": "your_gateway_id"
+    "AI_GATEWAY_ACCOUNT_ID": "12756ebe4e25332254c94e70905476e6",
+    "AI_GATEWAY_ID": "dev_gatewary"
   },
   "assets": {
     "directory": "public"
